updated code with annual growth column added for sorting

--- a/asx_ticker_codes.ipynb
+++ b/asx_ticker_codes.ipynb
@@ -68,8 +68,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#First attempt at sorting by years growth\n",
-    "sorted_asx = asx_complete_df.sort_values('1 Year', axis=0, ascending=False, inplace=False)\n",
+    "# # sorting by annual % increase after converting '1 Year' column to sortable value\n",
+    "copied_asx = asx_complete_df.copy()\n",
+    "copied_asx['annual % increase'] = copied_asx['1 Year'].str.strip('%').astype(float)\n",
+    "sorted_asx = copied_asx.sort_values('annual % increase', ascending=False)\n",
+    "\n",
     "sorted_asx.head(20)\n",
     "\n"
    ]
